--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,8 +4,9 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #485461;
-  background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);;
+  background-color: #f8ceec;
+  background-image: linear-gradient(315deg, #f8ceec 0%, #a88beb 74%);
+
 }
 
 a {
@@ -26,7 +27,7 @@ a {
   flex-direction: column;
   justify-content: center;
   width: 90%;
-  height: 90%;
+  height: 96%;
   background-color: black;
   border-radius: 20px;
 }
