--- a/styles/globals.css
+++ b/styles/globals.css
@@ -60,7 +60,7 @@ a {
   color: #F2F2F2;
   padding: 1rem 3rem 1rem 3rem;
   margin-top: 3rem;
-  background: linear-gradient(97.27deg, #663D5C 0%, #A093E5 100%);
+  background: linear-gradient(97.27deg, #663D5C 0%, #a88beb 100%);
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.18);
   border-radius: 9px;
 }
