--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,9 +6,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #f8ceec;
-  background-image: linear-gradient(315deg, #a88beb 0%, #f8ceec 74%);
-
+  background: linear-gradient(112.87deg, rgba(250, 62, 0, 0.03) 0%, rgba(250, 62, 0, 0.36) 100%);
 }
 
 a {
