--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;500&display=swap');
 
 html,
 body {
@@ -40,6 +40,7 @@ a {
 
 .description {
   font-family: 'Poppins', sans-serif;
+  font-weight: 100;
   font-size: 1.8rem;
   margin-top: 1.8%;
   margin-bottom: 6.9%;
@@ -53,12 +54,12 @@ a {
   font-style: normal;
   font-weight: bold;
   font-size: 1.5rem;
-  letter-spacing: 0.12em;
   text-align: center;
-  color: #F2F2F2;
+  color: white;
+  text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
   padding: 1rem 3rem 1rem 3rem;
   margin-top: 3rem;
-  background: linear-gradient(97.27deg, #663D5C 0%, #a88beb 100%);
+  background: linear-gradient(95.29deg, rgba(250, 62, 0, 0.36) 0%, rgba(181, 46, 2, 0.62) 92.71%);
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.18);
   border-radius: 9px;
 }
